<resources>
    <string name="app_name">Heart Tunes</string>
    <string name="title_activity_main">Heart Tunes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Heart Tunes</string>
    <!--    <string name="nav_header_subtitle">Best PLace to find All your Songs..</string>-->
    <string name="nav_header_subtitle">Place for all your fav. songs</string>
    <string name="nav_header_desc">App Icon</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_themes">Themes</string>
    <string name="menu_drive">Drive Mode</string>
    <string name="menu_timer">Timer</string>
    <string name="menu_share">Share</string>
    <string name="menu_Quit">Quit</string>
    <string name="artist_name">Artist Name</string>
    <string name="song_name">SONG NAME</string>
    <string name="SongIcon">Icon of the song</string>
    <string name="img_play">Play button</string>
    <string name="img_next">Next button</string>
    <string name="img_queue">Song Queue button</string>
    <string name="title_activity_library">Library</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_favorite">Favorites</string>
    <string name="title_activity_timer">Timer</string>
    <string name="title_activity_themes">Themes</string>
    <string name="title_activity_playList">Play Lists</string>
    <string name="title_activity_drive">Drive Mode</string>
    <string name="btnClose">Close</string>
    <string name="start_time">00:00</string>
    <string name="song_artist">Song Artist</string>
    <string name="title_activity_player">Playing Now</string>
    <string name="StartTime">00:00</string>
    <string name="EndTime">Loading...</string>
    <string name="title_activity_Artists">Artists</string>
    <string name="artists">Artists</string>
</resources>
