<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_themes"
            android:icon="@drawable/ic_menu_themes"
            android:title="@string/menu_themes" />
        <item
            android:id="@+id/nav_drive"
            android:icon="@drawable/ic_menu_drive"
            android:title="@string/menu_drive" />
        <item
            android:id="@+id/nav_timer"
            android:icon="@drawable/ic_menu_timer"
            android:title="@string/menu_timer" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_quit"
                android:icon="@drawable/ic_menu_quit"
                android:title="@string/menu_Quit" />
        </menu>
    </item>

</menu>