<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="2dp"
    android:layout_marginBottom="5dp"
    >

    <ImageView
        android:id="@+id/imageMV"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_icon_light"
        android:layout_marginStart="5dp"
        />

    <TextView
        android:id="@+id/songName"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textSize="20sp"
        android:text="@string/song_name"
        android:layout_toEndOf="@id/imageMV"
        android:layout_toStartOf="@id/songDuration"
        android:textColor="?attr/colorPrimaryDark"
        android:layout_marginStart="5dp"/>

    <TextView
        android:id="@+id/songArtist"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:textSize="18sp"
        android:text="@string/song_artist"
        android:layout_toEndOf="@id/imageMV"
        android:layout_toStartOf="@id/songDuration"
        android:textColor="?attr/colorPrimary"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/songDuration"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/start_time"
        android:layout_marginHorizontal="5dp"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:textColor="?attr/colorPrimaryDark"
        />

</RelativeLayout>