<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">
    <!--    tools:openDrawer="start" >-->


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightBg">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightBg">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/ic_menu"
                app:title="@string/title_activity_player" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                app:layout_constraintVertical_bias="0.0">

                <ImageView
                    android:id="@+id/songIcon"
                    android:layout_width="250dp"

                    android:layout_height="250dp"
                    android:layout_marginTop="70dp"
                    android:layout_marginBottom="94dp"
                    app:layout_constraintBottom_toTopOf="@+id/txtSongName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_icon_light" />

                <TextView
                    android:id="@+id/txtSongName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/song_name"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/imgFav"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/songIcon" />

                <TextView
                    android:id="@+id/txtArtistName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/artist_name"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toStartOf="@+id/imgFav"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtSongName" />

                <ImageView
                    android:id="@+id/imgPlay"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="55dp"
                    android:contentDescription="@string/img_play"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.494"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/seekBar"
                    app:srcCompat="@drawable/ic_play_" />

                <ImageView
                    android:id="@+id/imgPrev"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="55dp"
                    android:layout_marginEnd="4dp"
                    android:baselineAlignBottom="false"
                    app:layout_constraintEnd_toStartOf="@+id/imgPlay"
                    app:layout_constraintTop_toBottomOf="@+id/seekBar"
                    app:srcCompat="@drawable/ic_skip_previous" />

                <ImageView
                    android:id="@+id/imgNext"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="55dp"
                    android:contentDescription="@string/img_next"
                    app:layout_constraintStart_toEndOf="@+id/imgPlay"
                    app:layout_constraintTop_toBottomOf="@+id/seekBar"
                    app:srcCompat="@drawable/ic_skip_next" />

                <ImageView
                    android:id="@+id/imgRepeat"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="135dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/seekBar"
                    app:srcCompat="@drawable/ic_repeat" />

                <ImageView
                    android:id="@+id/imgShuffel"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="135dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/seekBar"
                    app:srcCompat="@drawable/ic_shuffle_light" />

                <ImageView
                    android:id="@+id/imgQueue"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:contentDescription="@string/img_queue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_queue_music" />

                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtArtistName"
                    app:layout_constraintVertical_weight="1" />

                <ImageView
                    android:id="@+id/imgFav"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/txtArtistName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/ic_favorite_borde" />

                <TextView
                    android:id="@+id/txtStartTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/StartTime"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/seekBar" />

                <TextView
                    android:id="@+id/txtEndTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/EndTime"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/seekBar" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.drawerlayout.widget.DrawerLayout>